--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -20,8 +21,26 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-  </head>
-  <body>
+    <style>
+        @font-face {
+            font-family: 'iconfont';
+            /* project id 399052 */
+            src: url('//at.alicdn.com/t/font_399052_fbxeuie4unswnrk9.eot');
+            src: url('//at.alicdn.com/t/font_399052_fbxeuie4unswnrk9.eot?#iefix') format('embedded-opentype'), url('//at.alicdn.com/t/font_399052_fbxeuie4unswnrk9.woff') format('woff'), url('//at.alicdn.com/t/font_399052_fbxeuie4unswnrk9.ttf') format('truetype'), url('//at.alicdn.com/t/font_399052_fbxeuie4unswnrk9.svg#iconfont') format('svg');
+        }
+        
+        .iconfont {
+            font-family: "iconfont" !important;
+            font-size: 16px;
+            font-style: normal;
+            -webkit-font-smoothing: antialiased;
+            -webkit-text-stroke-width: 0.2px;
+            -moz-osx-font-smoothing: grayscale;
+        }
+    </style>
+</head>
+
+<body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
@@ -36,5 +55,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
